fixed overflow

--- a/static/css/ezbot.css
+++ b/static/css/ezbot.css
@@ -14,7 +14,11 @@ img{
 	
 }
 	
-div#message{
+#message{
+  width: 400px;
+   height: 400px; 
+   margin:0 auto;
+overflow-y: scroll;
 	margin: 0 auto;
 }
 
